<resources>
    <string name="app_name">تسکرو</string>
    <string name="deleted">حذف شد</string>
    <string name="phone_number">شماره همراه</string>
    <string name="connect">اتصال</string>
    <string name="connection_hint_text">شـمـاره شـخـصـی که می خواهید لیستتان با هم هماهنگ شود را در فیلد بالا وارد کنید ، سپس متصل شوید.</string>
    <string name="list_mates">هم لیستی ها:</string>
    <string name="dont_have_listmates">هم لیستی ندارید :(</string>
    <string name="disconnect">قطع اتصال</string>
    <string name="save">ذخیره</string>
    <string name="title">عنوان</string>
    <string name="necessary">ضروری</string>
    <string name="login_for_shared_section_hint">برای استفاده از بخش اشتراکی ، ابتدا باید وارد حساب کاربری شوید.</string>
    <string name="description">توضیحات</string>
    <string name="slogan">کــاراتو بــه مــن بســپر</string>
    <string name="login_to_save_data">با ورود به حساب کاربریتون دیگه نمیخواد نگران پاک شدن یا از دست رفتن اطلاعاتتون باشید.</string>
    <string name="username">نام کاربری</string>
    <string name="continuance">ادامه</string>
    <string name="enter_without_register">ورود بدون ثبت نام</string>
    <string name="no_task">تسکی برای انجام نداری!</string>
    <string name="verification">صحت سنجی</string>
    <string name="sms_hint">یک اس ام اس حاوی کد دریافت میکنید. \n لطفا آن را در فیلد زیر وارد کنید.</string>
    <string name="confirm">تایید</string>
    <string name="no_title">بدون عنوان</string>
    <string name="edit">ویرایش</string>
    <string name="write_in">ثبت</string>
    <string name="policy_lable_text">سیاست حفظ حریم خصوصی</string>
    <string name="policy_hint">برنامه تسکرو با احترام به حریم خصوصی شما، فقط از نام و شماره همراه شما برای برقراری ارتباط و تعیین شخص پدید آورنده هر یادداشت استفاده می‌کند و این اطلاعات را به هیچ عنوان منتشر نمی‌کند. پیامک‌های ارسالی از سوی برنامه نیز محدود به کد تایید می باشد.</string>
    <string name="do_not_show_done_tasks">عدم نمایش یادداشت های انجام شده</string>
    <string name="clock_format">%1$s : %2$s</string>
    <string name="time_picker_ok_text">تایید</string>
    <string name="time_picker_cancel_text">لغو</string>
    <string name="icon_of_application_content_description">icon of application</string>
    <string name="autostart_tip">برنامه تسکرو برای اینکه بتواند در پس زمینه نیز الارم های شما را اجرا کند ، نیاز به دسترسی شروع خودکار (Auto Start) دارد.\n\nلطفا همانند تصویر بالا ، این قابلیت را در تنظیمات فعال کنید.</string>
    <string name="go_to_setting">انتقال به تنظیمات</string>
    <string name="auto_start_permission">اجازه شروع خودکار</string>
    <string name="today">امروز</string>
    <string name="select_day_hint">برای نمایش تسک ها \n یک روز رو انتخاب کن</string>
</resources>