<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom_sheet_back_color">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_exclamation"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:tint="@color/urgent_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_exclamation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_auto_start_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/iranian_ans"
        android:gravity="center"
        android:text="@string/auto_start_permission"
        android:textColor="@color/urgent_red"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/iv_exclamation" />

    <androidx.cardview.widget.CardView
        android:id="@+id/autostart_card"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_auto_start_permission">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/autostart_iv"
            android:background="@color/white"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/autostart_image" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/autostart_tip_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/iranian_ans"
        android:lineSpacingExtra="6dp"
        android:text="@string/autostart_tip"
        android:textColor="@color/description_black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/autostart_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/go_to_setting_card"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autostart_tip_tv"
        tools:layout_editor_absoluteX="24dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ordibehesht"
            android:gravity="center"
            android:text="@string/go_to_setting"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>