<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/dynamic_background_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.VerificationFragment">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        android:backgroundTint="#14666666"
        android:id="@+id/verification_ic_card"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_margin="8dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:tint="@color/green"
            app:srcCompat="@drawable/ic_verification" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verification_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/verification"
        android:fontFamily="@font/iranian_ans"
        android:textColor="@color/description_black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_ic_card" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verification_hint_lable"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iranian_ans"
        android:lineSpacingExtra="5dp"
        android:text="@string/sms_hint"
        android:textAlignment="center"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_lable" />

    <com.jakode.verifycodeedittext.VerifyCodeEditText
        android:id="@+id/verifyCodeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layoutDirection="ltr"
        android:paddingBottom="12dp"
        app:BottomErrorIcon="@color/urgent_red"
        app:BottomIconHeight="2dp"
        app:BottomIconWidth="35dp"
        app:BottomSelectedIcon="@color/green"
        app:BottomUnSelectedIcon="@color/grey"
        app:ItemSpaceSize="28dp"
        app:TextColor="@color/title_black"
        app:TextFont="@font/iranian_ans"
        app:TextSize="12sp"
        app:ViewCount="Four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_hint_lable" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layoutDirection="ltr"
        android:layout_marginEnd="8dp"
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/iranian_ans"
        android:textColor="@color/urgent_red"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/verifyCodeEditText"
        app:layout_constraintTop_toBottomOf="@+id/verifyCodeEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/progress_btn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/iranian_ans"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>